--- a/BattleTank/.gitignore
+++ b/BattleTank/.gitignore
@@ -1,6 +1,7 @@
 # Starter Content
 Content/StarterContent/*
 Content/_Levels/*
+Content/UI/BT17-Firing-M1A1-tank-in-Djibouti.uasset
 
 # Visual Studio 2015 user specific files
 .vs/
